--- a/public/index.html
+++ b/public/index.html
@@ -15,17 +15,17 @@
     <title>Olive.Cash</title>
     <meta
       name="description"
-      content="BLIZZARD.MONEY - A next evolution DeFi farming on Binance Smart Chain (BSC)"
+      content="Olive.Cash - A next evolution DeFi farming on Binance Smart Chain (BSC)"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="twitter:image" content="https://blizzard.money/images/blzd/hero.png" />
+    <meta name="twitter:image" content="https:/olive.cash/images/blzd/logo.png" />
     <meta
       name="twitter:description"
-      content="BLIZZARD.MONEY - A next evolution DeFi farming on Binance Smart Chain (BSC)"
+      content="Olive.Cash - A next evolution DeFi farming on Binance Smart Chain (BSC)"
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="❄️ BLIZZARD.MONEY - A next evolution DeFi farming on Binance Smart Chain (BSC)" />
+    <meta name="twitter:title" content="🫒 Olive.Cash  - A next evolution DeFi farming on Binance Smart Chain (BSC)" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
