--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="twitter:image" content="https:/olive.cash/images/blzd/logo.png" />
+    <meta name="twitter:image" content="https:/olive.cash/images/olive/logo.png" />
     <meta
       name="twitter:description"
       content="Olive.Cash - A next evolution DeFi farming on Binance Smart Chain (BSC)"
